redo cloudflareddns config

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,38 +1,39 @@
-#ENC[AES256_GCM,data:l39zzeHM23qQdD7tXr6G96mjb2pC/cs0tZIIawY1qfdu5Cier6W92KWPKVqX0Y+R9i4w5cQkq8st0LMXJuTaDLA=,iv:eylB89hqm+zUOiBxoCUvpCR+CLMK7YfF/g+BXtGfFj8=,tag:ssJmr7q3pP3DIbiRtCKnVA==,type:comment]
-#ENC[AES256_GCM,data:p3euFevI5ABFBhyIjDZ/kLZiYXtrtinxYwyK/kKezO11cpuMiJu43/UpkJc=,iv:HilajWwJzHHPHsH8p9sRtCpRgV9qOPrh/05TYqVA0QM=,tag:TuHtQ795t4ZzwQNYp4zUJg==,type:comment]
-VIP: ENC[AES256_GCM,data:hLuLyE5LTcFf06iYWQ==,iv:LGdzn+Mw5+ES5vX6/lSbkTWsh2COaYd/JlNMFh3/swI=,tag:SU07WIy9X2z/zbbjW3KYDQ==,type:str]
-#ENC[AES256_GCM,data:RTRAfiDDCWPJpOs338jTWXSSFV7p8QajV/zl,iv:CBZcZ40tkDrDpHiVPSRliKK8APHHDTRFsxrFE1nccxM=,tag:Zppcg9GPAOzCd7AMkQi3AA==,type:comment]
-#ENC[AES256_GCM,data:0npu4TQ3Riw/L6Hu67x5rK61QB7rYEVDWEERBe3I319hcRkIEuigoDCqNS2uWpjmanGqe1PNEJK6SZ+uOBjQZbaV2c6p8d3dtyLnvzP4SZLeLNhkHiye5h8=,iv:i58rDMGzcUpeHkaDQcVZrW0rV3GUltPmemgf4Uz0LI0=,tag:QmN/BvRcaHNLj0sjOgh7uA==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:qyE6wakRezoSSAH7pwM=,iv:ekAeCvzjqW4Q4JHhCMQ8rc86dVxwtbGxFI73lA4n+e4=,tag:jrpknJ93/N3lKvtmVgnw4w==,type:str]
-#ENC[AES256_GCM,data:eFeYijyUQS5YT7W9SU+YalbFQ4CBUZxHJ2R06UIrmcDADA==,iv:vo85GngQcXks00tH/A0n3dMzWNcfjXF7nx8JOJ0A4K0=,tag:Ikdlf7i4AWOHEwFJe+mIqQ==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:oXyqkureBF/pPo9sAg==,iv:ZcKTzZu9h7qrkHF1bqK78YQiFm1p608XUpCg+MTHntQ=,tag:IBLYW/TEVo2QB+p50gsncQ==,type:str]
-#ENC[AES256_GCM,data:KVuJnmRA0s3DspFxnNCbLqYbAHj+iJBFiOGDweg5UttMcYTl1aJrZnNl9J+HjSQ=,iv:odGBuRBXjq6mM3XTyW/PYt/U3bwP552cyLj0q8/a/no=,tag:ubzgZHhiyJ9T+pmdeOicog==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:UPgDhyPikTB9knvGRhT5lE3bHaYAEsNKssMDyQrJhQ==,iv:wCgIgxsU6oya0Vp0DGVZg7x9meqKKBFt3lTEWgsEpsQ=,tag:MMnGRI8RL4xKde0y7PfGeg==,type:str]
-#ENC[AES256_GCM,data:vS9urCTLoDGrAH4MAZarN2mUv6nSh6tuFbmTE7Oq2PUw9OMjYE02O/WcF/fbmZ/b8HiyEdPeZG2tSERUlqazmdOKfq2Ha92zSLKPGkaHlEAltg==,iv:b9XxTSi3fAhQhSdvV8HaWhXPbjsSogqIjBVsMoIB8UM=,tag:mdSgblyj3eYd+g/Nx3lf3A==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:zwZa3DlTgEcDylykM5K7,iv:qAcJMKqj3qUZHjz3bScfqlUv6JJWqSC/F8P1U6WyPaU=,tag:PWbwa5EgoOPLwafdg7zgnQ==,type:str]
-#ENC[AES256_GCM,data:yuVqb/rkI/S+OH1evzZFLBgylLL0k0zcbOrz4p7p8F0c,iv:2T4yPfv/VOzn+N/CGvgaN2pSiB4F5U/dM4K0DroFUnc=,tag:aS5bOG/FpZi6HQ/fvJWRVA==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:vXeCAqubJdXUd66Y5SUy,iv:yuR4wibI+LVpXLuA1N2nkFStdFgqWb3rjPxoYzo/LLU=,tag:rh2cSic9Zh6bGKOK3pTHSw==,type:str]
-#ENC[AES256_GCM,data:Ethi70X0NTVKObGIAWhPcpBFW2jzOAjYBoghmODc+FrvwQV19nxIoLXy6H3ioWsYdNWoiz0uZCgSlqbLv819S+42YAw88pgQ/R4+f8yEOv4=,iv:MSMDLVh6gluxF1l9YUTfVqb9K6GSvm2BJTOc7S4XlmU=,tag:e7QgPX5/Mm1thVt2N1ZD4A==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:Zkqa7ZZ4huyduNRDkyzk,iv:NuIRCX0H7ygM2LGKwlks3JjLNZ3ITFAJXInYvbnrTtM=,tag:ne1znvU+QtsggxH64dzVfQ==,type:str]
-#ENC[AES256_GCM,data:q2AMutZIA8kJQKrW6Bd0NV1RXhei52h9l99ctvYR8glBeIofI658O+7k9milRbC+Rbn8xi6Uu8YjSkIayh9HRWO1AjorHWFgsqR6ySrc6umb2FRuJg2M,iv:GhROqraFPwx/PDjUnQiumsR2Y7YteLrVVcYKinPWu6Q=,tag:rkyJ+HIZoZFWU04rzkmgfQ==,type:comment]
-#ENC[AES256_GCM,data:b94TPRCA9ng43lqDY6CI7rVYojwfuQ108mmg94Xl6PCLx6YcgqnEoxJWFYyl33AjHWMzncEn5mwU1sFF0XrrGQCS1bcD/HgKxR9QGD/7jwEZKtaxA/JBwun7V+E2M8OHvjeRCSEmDYaVXhMZVwvTKGBBegvqwgQOjIJXig==,iv:a5sxPmRo8G3BaxGgj5BmTIrwe1ASPTSNGDyC6OKA81I=,tag:zJU8Ua+XTs2skIMnIeStjw==,type:comment]
-#ENC[AES256_GCM,data:R598hJ+VeDyodVxX/UIGlmpwSSS322IZ0y0a3rq96qRfcBXk+dOcRciLwYFwewLDEmOh56xy9uoiMODdSvDZtv8+NZgBLv3pGGP3Fn9U1rg=,iv:5+1ZjJqqQJl71+IWdzyYAcsj9zkwv4SENuTi/l21nQY=,tag:IdISGNMm0yZQWi71qfraTA==,type:comment]
-#ENC[AES256_GCM,data:heiaHForx1OzPXfUDgci6In4ZoFOANk0hncZ6prgEHxKL0AxoJhCrm60ncJ2rhcCASVRFC2M,iv:e7r6GLY5M/WEDqi3Ll9hUTGNvw1km7WDShwF1cTwF5A=,tag:61m+tVvuw077EWDRwii+7A==,type:comment]
-DDNS_URL: ENC[AES256_GCM,data:105CEZgz+zgEVH1Hw4A=,iv:BokOU6lu+0YxPbiKts7wDQy9aeQ9V2KyT9mXZcOQvXI=,tag:9H5Ys66fPOIwcMZFJ4R6Rw==,type:str]
-DOMAIN_0: ENC[AES256_GCM,data:sAncX5rhkUTkhfj+,iv:E4+jh1miGBr8H5HH/kIDmKxb2+QGfcSKPTJaWBBN7UE=,tag:650V86O3brDu7wYsG+0LQw==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:TsY8pnKpOotCU/jkJcKne68=,iv:TRq7OwIT2oUsm7MR7g4YDkYCP9m1/4XN7J+tD5mQGV8=,tag:C3aKabnY8r3M5pxdBnEhYQ==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:4zIoqgk5MZAa+xtx7zWCXHDW9s73wKIKq0DV1PQABfkhe3nvUahZpw==,iv:T1VRBfj1bRXmqQpT+B+LPtLkhk6MvnpcSyA8er47sHM=,tag:IvEJzQ+CLN7+onNQCUeojA==,type:str]
-#ENC[AES256_GCM,data:upJ+tlR9s1QwvKZUlvlE8gkhTqWj60KKQPSXFvFDDjg2IIlg3fF0AIKvxtuveep1Jz1EzzS58WY=,iv:QisxeZ+jrLqd8/SBmaFzv+yHB9sFQ6TZYd7bNI/QiBQ=,tag:1qvt9q7BsHCq8DUCErjlFw==,type:comment]
-#ENC[AES256_GCM,data:xRel7N9wRLrRzL0H+tp+0dl39S8IeBKbzA==,iv:jzVHqM+0/1HSEVlT/fE34ZMeqY7jIoLw0bPSbk/aymI=,tag:xXJV6TvZ3N6TbGaD32LY5g==,type:comment]
-#ENC[AES256_GCM,data:VJxw87cP2npevhZ+w66P/X+8+UqlHBXUqMqbtZhWPlqsrRK4d7FN1+6iCUMSs4mP0eFCXGm4AataJa8EtZOKQRFgbTn+VRIXEPLrrfc=,iv:Ywz/Qmp9oCzQPbtDVW5wGPO50FrriANxAf2UInfP/2I=,tag:iEkzHdcTQdSqFWozrcUJkw==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:vJqS6CCYZZk4trLpgS5QRFpjlrVV/uM/oBtlgNzYK65s+D3bm4OjbjL1plpMxqbs,iv:dw0RI3ZX0Yf/uJohiloDVMQSAlpsDPO78Pt8d4SP/jA=,tag:aKiCtIGBrDkh/qr5x1BGQw==,type:str]
-#ENC[AES256_GCM,data:PEVI5EKAtxxpArK1r3E6/pKajBP7ZajsGy9c19zfsN8YSiz1/3zzxlvbA45Ro8wCE5zMJcv21BFZx69BiVD4tQUu27OVNaY=,iv:b/ZXeb7abb/88Abgk295D5zck0Uc8ndWjSS78GeHQL0=,tag:t0SOV4S3/mNWkY8R2I7zPg==,type:comment]
-#ENC[AES256_GCM,data:RBB9tz39Z5CZN07QXV2BYVXKaXlPNgmw3F2a2VN1ynd5/IojFWDcWp+3sHQtk2hBwNiXW+AH,iv:EAEche6CyeTl9JhhR/HYh5Z02jjeAoNLje9umRoq3/Q=,tag:SpOgoXQRgX0zkQ3PE3W4TA==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:QZBTdyovAw==,iv:6qWRIsiMbzwhqBZbw2XNekd3Mt2S05GKo/1BHl+LgVE=,tag:Q/9Uc8Jpfw77EVVXxVFFew==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:HBo2cir9EtyqL7329MXDvxvKebU=,iv:UC4A2S/A6rYiwwXc6JeomAxUxDaKYqfhqTzCJuOsDpo=,tag:BaM7J/As9Rvazqdc7dMObw==,type:str]
-#ENC[AES256_GCM,data:Qz0N+RXDslWhVEGF00w=,iv:l2Y3D8NK0RYHJTRtFiWyjPkGymaaX+tcLMR6QoUs2nY=,tag:2hqfbpVf7ahJtOagRL6YXA==,type:comment]
-PODNET: ENC[AES256_GCM,data:bJxHZjH6zJpFuhZPbQ==,iv:yNmc5lMxcYvNgjZF9a92azmJrrg1WJtKpw0lze8Lsmc=,tag:TjDzobuEgknelsikJDBPTw==,type:str]
-SVCNET: ENC[AES256_GCM,data:YRL0AeBjatcTIHAgcw==,iv:Nw3O1Xkpd8XpG6VDDzoTEGDgwIlJSOUdh4N0prS2+NE=,tag:YshTgouK2/oqpdSMPzmc7A==,type:str]
+#ENC[AES256_GCM,data:ECvX6YV65EKDRKaxl/BZeVtxMrGRqcM39MNoijFz0o8Q98kadgpKKhr1g/uU65OPF/qF4m8jTiLy65PEshHoIoI=,iv:JfeEdthRUOAimrh947G35e6Ko5hlXjORKzGCJlQ9lFA=,tag:/qjkgwOa7P2+KZR8jZ6o/w==,type:comment]
+#ENC[AES256_GCM,data:qXBZ1GbwibuDtNwN7gQvkPg46ivFRoArU2v8QNcuobVQZpJUVm2HqxELPSI=,iv:Fe0Hyoc79UP7KutdNMkwyvRpFC9AXOjdsNUMAGOgb5k=,tag:Kv7CtqwTHwu8+Ed0h5k1Ng==,type:comment]
+VIP: ENC[AES256_GCM,data:H1csHymEcw8pFFJulw==,iv:G1ddxD16XA/SszAsdf7KnY3NgFjFcTFr1IrvaEbam3o=,tag:q88C4ILQQMzWpFjwklUdHQ==,type:str]
+#ENC[AES256_GCM,data:ZR3JrVJcxj9JBUuicIWGexM3HHf/Z23udiT/,iv:F4jFJSG2RMmqfCYGsv2Ix9JwCQKyTPUhcTm43ut/QJk=,tag:0/55nLIwxQytbACY4wigaA==,type:comment]
+#ENC[AES256_GCM,data:q8gsivtNkGnXxnIjXlQhp+70owIC86X7i1PsfTAqVrhMM+uYP2rAyOMqoy/XA664SIXS6F93bRXBUA5ojqg53HpapSao87B9QJB9SrcplqK8Qlrw4Bl8Yoo=,iv:0F1Vdrzy3FQFx0LFgXjD/VnY2X8AmGpWiqe8nYVH1t8=,tag:OCxg7OymxxF8EM7gUpDU4Q==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:10OhdO4jP2xU6CItbZE=,iv:emw6CsrgmJD5Xk8ZZYbEUVvH8JE9ospDqL7Tvp8nGfs=,tag:48KWNTCs8nfYDL4uBVq47Q==,type:str]
+#ENC[AES256_GCM,data:U+6nd83GxH+XwWf4RTwEhQIDC4HC5hZzEX07ofUUU8kGEQ==,iv:064mCkQOLmkBg5FMplRc9Jchk+Wc7aOh02ws+NW4Ie8=,tag:e/5wEKv/MsWuthusNwDo1Q==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:vMK07h6wf2uovOxUog==,iv:B2AAJ3NBKO5VS1tjU/qO6S3zmLVDOsu94pveHAfc4xc=,tag:buVHxl23KwfJcnFdTdOktQ==,type:str]
+#ENC[AES256_GCM,data:wmbqoMtBeJo8RFsGGnQmc4833nqbeQaPcgoOk0GxzWaHX4gORl/A6lsFT+lyD8E=,iv:JPvh38hfqrdIzWy+wAJ3OfF3qJqLlHOix40c6reLeZA=,tag:/Vo+TYs2ZJfzfGL/yGJ+tw==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:2OFyDqzsyMMjHZiVQqulXK1noUFG6gOEpyaW8SXJcA==,iv:aerl8AVJg0uyNLGW3CBPUSuX/5sBr5vePtk+P+s39Y8=,tag:e98jN6Onf4ERlume/5+iPg==,type:str]
+#ENC[AES256_GCM,data:4w5jQdgSeZQlqRfhQUOsB7fb0uGQFkvaEZK8FdmLx6MAq8uxewROGR3qnWYvO/r9y7xcTKOZ3kgV+NkPTOfP6LKCZQLbTxirVgE4dw6l9nShTw==,iv:+u7mY4i1FV59k+sRTB3glJDA57bilnDyZE6D0GFCKNU=,tag:6ao2N9WwygBhAHBIqlRnLA==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:+rEwpBIpebEikhublhy+,iv:4nCXQ3/BUkjDjTR4coXXZWzby3FSZpEuh5i4HtYEwj8=,tag:gK7Dgn/+FlyefDcC4AdD2A==,type:str]
+#ENC[AES256_GCM,data:CqcwQFeMiPY0mVpyVTMPBOAPTYIw4NNwmXQUe45kXX3b,iv:w7r7QDFqflJGEOzOpyE8MjErjagscZXXA3kTIU9iR2E=,tag:XRsAXuhyhrscmJ+BSNkxOA==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:pSNveOrmwmUwVtS0rd4h,iv:GLtwa9ra+Jo+rlQ6+REWWdt56ygb10ELqHXVR5ROFY4=,tag:6mY4gQm+SeNblN5Pmr4wEQ==,type:str]
+#ENC[AES256_GCM,data:7TpHaBI/YVYwLgdQwgKI/e6zGG2v85tw12vPS6rZh2GbFEMwdNGASLGcR29q15a9u30cQd66Sb7IWuGidwWbZ/fyr8fkneYrToK1CXNVqGI=,iv:FP9WB/bS6E0NZODbB5MTXrhLD5KWB1fwiOx03q2zL8U=,tag:qWGp3lv2xdgYyP5wlNAUdA==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:BS37jAgDE/ZnSyIvqi0b,iv:rlcRR6LO5pH6uDDjfhhyTzHz3lwTsTxSc4wqN1epM+I=,tag:Hs8KE463Mhy/uDaJGU2PUA==,type:str]
+#ENC[AES256_GCM,data:v8jgASjGSK8KYsS7RiikQYnudkg+WeVmcQBojhTgz97Mhx/ed3uDJm7Tom1HPJ6gxA/QsUy1+1tf+3uoqooXzKCjophT4Jy7pMaM+3gGdfoQe91fYoqA,iv:Gmw4on6D/rbVSTkrmF4Zi7825fX33bnsuctIG3Fky6o=,tag:w5ICq9kaHCkRxHXfLBK0Aw==,type:comment]
+#ENC[AES256_GCM,data:AXIYf+o+P/eiQKYr3vZADhYlpwkGDV1reyxFiLMWABbaCb+hoTkfkwgcejefkiNTSm7xbvYtTOr0wcF6QgynpzkcyCW/TrPWtxRYgpP0kd0FRasPRfaf3dm0FkvbxQn+63q5IKK9OhbfLhaoBrhA67fnqVzn45Mt/sBiYA==,iv:JFC/xMrPmDKDp+XNNTrc87uLwA2s24+2EVxyOwv8uIU=,tag:mmQoi5fDITNnO8rDuEVmOw==,type:comment]
+#ENC[AES256_GCM,data:2/G3q8KXTm9xgb9ljaYW23aFOv/1QWtXZTW9LEBv3QEpkTCKyM1NzkSi54fe6sWWem+7z1k9kzj/0zmKlKVABRXwWqF9iEKMeGgi4sjYc9Q=,iv:ZZaQ1NVWI2BSZF9FuuOl/tQFhPf5edR//BheoOR4k7M=,tag:hkppcUrkVKDDbHoLoMapiw==,type:comment]
+#ENC[AES256_GCM,data:s+rgNtUszTdSFuTYAhYehqK4Hurzq2Y5vti/lBivqdYxPQgFK0IKuOjdkitaJ7Llp4B4IC/5,iv:5TEd4mskiljIT+jJsSxxKdsQl7KTZiLMkYe3ObnCzt8=,tag:tsnn71Mp1dsQsfS+yE3h/A==,type:comment]
+DDNS_URL: ENC[AES256_GCM,data:YShRYlytXSuGkpeABfY=,iv:toRvDL00EUAtSgBBZ1vRfn8jQNN4CiJDyMYGeljK37w=,tag:kQH1R5ILZ8AIskfWhL+/Gw==,type:str]
+DOMAIN_0: ENC[AES256_GCM,data:ephpOC8a3/YvFiKi,iv:chyJJKGXIhmNdESLbjXm91m617bAHXWiKwMOj12fTvs=,tag:YG/3csEZ0D5r7GCcfNT99A==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:kT49Y7YCb8bKa7HZZPcC9PE=,iv:6vIzBbRRs2+XFP/2mkXqA5Z2N2we83o9gySD8rfVdAc=,tag:KgW9FLAPBvicMFvicxtB1Q==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:Llru+nWC+Jiebg1bihAWrAl7OgzX4jXpM0BxT/T5mC6il0Uh6tjC7A==,iv:EIIUeorrsFGq6LHY3wknbdeNaie8FY0Hfqk27952FCU=,tag:1l1aRVq5BVpDyPY6OBj2tw==,type:str]
+DOMAIN_0_CLOUDFLARE_API_KEY: ENC[AES256_GCM,data:Vtt1weoPij9nOEnBH2c8VIft3Nt0rS763gnfYWqWAHbCzKua8Q==,iv:xyx3YuthTlMumIt8rKw08zwClqNEcwWo5wCN+tFo9jU=,tag:UWcNAWP+o5ghz90VFP5abg==,type:str]
+#ENC[AES256_GCM,data:Keix0qPM+DQZ5E0mntziyQ2irdDdQZCDSfkQ0UhtVWIdsoagwlCSAX2W19h12JG6GRHsYY5wLHE=,iv:FqH0zyy9olNmMhFlDTIWJcPptT3oTExaa3djpevtEAs=,tag:XXHurnkO9UanD1kKAeYzuA==,type:comment]
+#ENC[AES256_GCM,data:xu8PbEXzWBqziSWMQC7xdZ6kVSDpdUWbfA==,iv:YoBLR6xBg9m2BHles8V/xnjmobNztKu+PJX3YuptsH4=,tag:OVCYoGubG6D8dqKSinT9ww==,type:comment]
+#ENC[AES256_GCM,data:rXFckOivvsgjBPHa87EUBzPdYgI8ym4TuxxBkP7k+ZpwUthXpVoUtB7MJpqUNKZc+OgAkJNE7EuSMHLGjixwfpyg8usJrTJ0H3IQTps=,iv:A2gVX0XakMIGKouRnGkUvsw/e4GRdzsbzwaKqonGcs8=,tag:a6AMbr5VW+8EVege0ATJfA==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:5Qy7vUkugPNro1nzMJbpq9JzW3OwC54L+UKRgjBNBLI965nqlf2rJtkrnaI5PdQS,iv:pKBOgsZsOcvVLN1RR0t8bZ6KnoNDE3mBHg4ALK4LOxk=,tag:NStj70tJOVMxDTQVaPDjOw==,type:str]
+#ENC[AES256_GCM,data:t9FyhNcYLq1qSMi0T+ZSIj/ZtuGLGSjnLQOWg1bzDxHsajgZ433UEKm5Hnb3/B1A0Jk8T5wOds75IQYSwPYJ1rUxGt7N+PA=,iv:PmiFSdROyooNSSyHIc3nXMcywr10skehLwok/D/iCls=,tag:+GUxsjdexn7x7HNrHDbHfw==,type:comment]
+#ENC[AES256_GCM,data:/OTL0SYqp5hnxVHoKLrSQbmxnbi3jPRUGxfNh4x9U4/XediuTMLyX5uqVykHGOIyApGdMiEf,iv:+AD6lYjkFvY956/yL4PgWUYqGqWTVWa8Xvjef10aagU=,tag:YP+EVyY9/cEaUnsqF358nA==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:TIB5PnwP5Q==,iv:6eZmWx3LRFWNmHgBFzxFQdlu7WFY4+dW8Xkh/nZuQAw=,tag:mT0fSuzXYwzYbzXYnViayQ==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:B11dnyxqEgOw+p+LWxR7jE60C4E=,iv:5Cvs3RCgRJZVeaU+b5gEW3iJN0P1Wm74Xl3UkDfxGs4=,tag:ZtMAIN/6m2fKMMY5poTXHw==,type:str]
+#ENC[AES256_GCM,data:SwPO+6V57Y8Mb7DUU5g=,iv:mFOwMI4DLkBg1o93tXtuVh+/BRGKyFq89bIR/lv0eAc=,tag:weHGKNzh+fz6cLG6NElPcA==,type:comment]
+PODNET: ENC[AES256_GCM,data:sLIl9PNl6SL/uxav2Q==,iv:mGAoM/mmXKz3BtoSqSowsfiWl//mJTeMd9ReNa5Rwlk=,tag:7d8eNESoBHe2M5QKsCDIrA==,type:str]
+SVCNET: ENC[AES256_GCM,data:+689oxeez3p3aPZ3zA==,iv:OYe4C0SID87Vz7q/T5upX0GzjtOSFsQM/25Gofsi1sM=,tag:Us+CTOo8TQGJHyW3fE/Q7A==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -43,13 +44,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBMcG5BZGNnNHc3Q3BvVE9L
-            cEsraTBJVjIwSWc1dXZJNHJFMm5KN01iTUZNCnMrUm1zU25md1RENVcwTlgxYzFM
-            WC83ZG9GdFVPeEsyU0xramJaZUcxeFEKLS0tIG1DK3VwWjRMNTQzWWlnWHhsQ2lz
-            Y3Bxa0dTTWFrWXA5OTVseFRMY2dJN0EKkRoNnqN8pYoIaQtgTCYaBJanoV+iO1vi
-            eLrRgXhYpYnPC7eRWWTnl4fE9xBSXuqPQCiBM5ATt+vHqHi7erxrCw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXcXJreTBRWnkxclFhVlg3
+            cmtIK2Uxc0RMRURRTloxK2Q5OXZ0YmNHY2xnCldzZGp4U3dZN0lVOEU4M25XbDFm
+            T2thbC9pSEI1MEpsSmxCZW9VZlVuck0KLS0tIFhRUzBIbm9nVWg5eDZsUVVpTUl3
+            QU9UL3dqbFZpREtpWXV2MnZDSEMrNXcKoi+GtyL+zYTlyWAVgTTkRNVnt3iDBl1r
+            z6szdsN/Tl9DgmBl5b3wjcWpuGkt5GVUyWtUBrTlUdzshMCH73FTwg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-27T15:08:00Z"
-    mac: ENC[AES256_GCM,data:YoZupLK+cEnaZU6fVfKfasXrPoMn99KgZni/1xhSH+N189QfxVpy0XudOk0duURQdnZPsm5SmZEuhwHU0nMqFpU8L6IgSSoJKu+YWZ0VL30WdnvhZ2UpCfiaCZuT9mbBQADkRsXdYKCVfjg4ht2ybjwt9w7KbPeq2CJMoMJrqKc=,iv:nBGsLFrCBccruR3o1SAgPfMqxf8elPXgHjBSJ+Rv6Po=,tag:jP5wm/K0a3wL3x/t9njLyg==,type:str]
+    lastmodified: "2024-12-28T21:15:59Z"
+    mac: ENC[AES256_GCM,data:g3BCCeZtPBwKqvWamL7GN/Abl/bSBCjCamPCLcriGIIokbUg4SS9dFgERDChz7F0rBQLn2176EGDK2ClyyBUFA2lvs6e5x5tJTiTOZ279i8yAgJswsEPCcjPcmX+9u+gCokrIKE8Lu+f3LQcSa6t+L4CqB2D/wIgbGPPUNkasI0=,iv:bKzD7Q7GPhIhzLx/eG8pUpgyGJrflnMejyeW1CBFkm4=,tag:qfp4Zb9morEQDPnQIMQLtw==,type:str]
     pgp: []
     version: 3.9.1
