--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,42 +4,43 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:6NKi/wIiWc4Dsy7MFCiloOX10UMmUHRbWfn8iJVuG9MTIIns+X05wuzc8DTsFTJVtYpwUgRm6rtYv/Y8HbYPa1o=,iv:ZFdj1kyiDkGTTKMWxCIb+A/4DsAGL0/rOjnHv+dwwGQ=,tag:Q8FOxWqmroHcqyoJOSc6dQ==,type:comment]
-    #ENC[AES256_GCM,data:Ypu/pEWfZDNbtxZ141iJpYxG+yu900qnoP6R//Oq3qEg4xNf+ovC4amhdPQ=,iv:WH0IafJJ+BtD/oL3pcMxSnH6w2wmESxLMJzPDJkfLho=,tag:oNkedca6GVnw/GAWQRUzxg==,type:comment]
-    VIP: ENC[AES256_GCM,data:Mt1ZbgKR5ST0siGtCg==,iv:zf1ooGYlEJFD79wVtlKhM/H24FCnpErC1SQ+7q1gozA=,tag:yZKxx7aO7w686iHPGkZ0AA==,type:str]
-    #ENC[AES256_GCM,data:PeSQRF8Dfs3cYQS5T/pyeNJ4U+2PiCXab2rD,iv:/Gbsr0q0GONTM4S1vi7gNBJivmoC7BXz6mvhT/8PV5Y=,tag:B/OTjkLwFDXbDtDLL8hY4Q==,type:comment]
-    #ENC[AES256_GCM,data:nSTVgUDXkmRN/TNo6Ajih1lqOWZAclJg9UanREJSlypTIMaM8fYY4xPY0KkYt/NLHo9IXK2qHDj4ELu8MJ55pNaZJXtHRB/bmRh+2OXmD/E4CXMU7tB8/W4=,iv:PI+CyFcOnTUUV5Iyr7Gwmk5yqiy+kjrVOcxm9lLzy30=,tag:EWI9SESdVBmCG1oOcKozIg==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:XBZkpGmbzA+YRz/ynOg=,iv:k8b8z9w1vysEKHskOBo6ooD5F5D/H7LjJ7wOZjnQD+4=,tag:ho6asEGcc3reh5OEy5zD8w==,type:str]
-    #ENC[AES256_GCM,data:sZ6VjElfjJ4ex7s6VXa+bDnmuwtdX0xdInNCJLpvls0haA==,iv:3HJjI3lixLxUWBPfUiD1vENx/ChvvellcZzaJVDgzig=,tag:DzHfjrMq1H+u1vURjyjakg==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:PF6hmuYrhtXleXiCFA==,iv:i1UU6dZtTgCw8s2K9wUQArolV6f1cHlbAA4Z9vC3rG4=,tag:qn7tPds31GyWIrAqOUmcnQ==,type:str]
-    #ENC[AES256_GCM,data:zwlkoblXmBTUpjFfI5d/8mA8wTWxA9ESOF1r/RMtom2MdUFiXNmp8rwGBs6877g=,iv:msD5xs0Kpx/W/+tIpUrXHzKZjjSKCH7zrwkek53SJs8=,tag:ND4RY5qt2Vba//F5OF103A==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:BRwTBkJNG6NcHNgBafKY3dMhH8cn/3u0ovqsWJhdeQ==,iv:10MGJSBYoL7bNexy3L4ILuTCAGVhlpTMqnWKFUX1CoA=,tag:sYFZ/oRxdnTLmLySNru7wQ==,type:str]
-    #ENC[AES256_GCM,data:LdAGvDMnyGkwtACpoeVs5Xa4jMhBBhSXHAoQd6MuTJsrQyJ63RGy0db3b/XIS12Gldtbf59oIooTwLenQlMwOHIJzb9VwZQBDc/sItKUGPmTZw==,iv:XKjsdK4Kmetan4uxb7po+CXJOZs6tkRELxooBWX00fs=,tag:ko0xgihM6ExLn/KHmmmDvg==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:Vk8Q48x1i29Ht2nViK+s,iv:QhpzFFxJY9ZAbxjo8HljLtgpC94DLVxa/R8X8JtzzQc=,tag:dZErG/divnmgVHJYkT9CUw==,type:str]
-    #ENC[AES256_GCM,data:jZsAeTSUimmjdZOepsDaps0scC1W3+K8ou+6+DkcvfEw,iv:oK9H/81ShBfgJsXg3vvspfjXd7xfOmccTBPfZhp/KjA=,tag:wyo8e0MlxeCQjYdW1XOWyA==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:/hWnmhNSQBaRlaUX/S+Q,iv:xv5xsM97kn2mkR3tW9anQsMIBldjSRs/ea3SFj5LVRg=,tag:duXo5JFSkYM9XOD7FLEAaA==,type:str]
-    #ENC[AES256_GCM,data:1ZlzRkC8lYeWe+h4NjMt8v14X3tqOp+h1a5HvoRvWDUxPn5xe+MlVjuEYw/NYe3RzwE88DORyxIcZKh5UEnlkFHkrb6hWIFoS91GHi7rKvU=,iv:effrHN1IUd8ZoV1BtcP0bOFLWkG/JZVeo6D54P1ximw=,tag:8DyeQFDJTVK+gGKj18weXA==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:9UhZAWDevd3wKIF2SKZO,iv:N7cLlLWjqI/5Qo7Vy/bZWwOL9YvHnQBELIsw05okxig=,tag:24DXUGHJGdZPBvpGEo3SOg==,type:str]
-    #ENC[AES256_GCM,data:FeEr7fHpFknm5q3x4IQpbPRC5V+AlkAAIBwqmQfnKo21KZaHD16aclb2rTjanKPQXDLFTBuhM0TUIQNB909XD7GYJCggxL/1/D/XHeIdLVEo71t6GGfx,iv:vWU0UO/VJbuuY5tZj+TYFCfwYi9qOcPYecJiBGhhgL4=,tag:z6fgyGcP3b44tYqep6pUkw==,type:comment]
-    #ENC[AES256_GCM,data:nll9JmsCD/pCJ93oFQrUV5tAzhBGg/9hB1q1V3bgFrtDf0Km1vNkS+RzrKNTjFpxym25AKhTjdT2bqr/GTph4dkFWdy2nboslP06GCsiedOe500p1K0dP5ggX6nqbUcUy1sQFyo01IWe1LI/tlbW+7gk8u5ide9lYPiPyg==,iv:KPPZ9kQOkolgAAroN0n5fZibZkujla/VWOX4jTf3LN8=,tag:pFJRtxIRoaiE4PGfD8qp+Q==,type:comment]
-    #ENC[AES256_GCM,data:jiUrCCS2z8bPop0jS7U49M4o3hCq5rhetStUPFo3vPdSQmcmOKnzd/3bHiLiasTkcrL6RAyVHqo3zR+IVWwE6phHHatGucWMSDjGZ43+KpM=,iv:ALYQJs0p1BgmHvKMmaLyShpBIM/SmFmTqbmMGR/ZTpc=,tag:UQJ1gs73x2NQLon/4RXeeA==,type:comment]
-    #ENC[AES256_GCM,data:vCXMiMIBeeDrjKv9oGyeaXdc6MVjIA1/vs6AxJlRF0N3YqeSDMzbfJxDHXd8TlBYO69UmgD5,iv:XdLkouGiBuaXt93UvSklOZjl1xVVvqdOW/waZ+aTU8I=,tag:h80kONQrJUsh0bVHSNVwCQ==,type:comment]
-    DDNS_URL: ENC[AES256_GCM,data:PIoVMHYBgJNYKygsiV8=,iv:kTBPNcucujSOHFAWXUAUC8U5/Qr/A5w2QHSjrKE7bJc=,tag:Uual/6DfYDy0sSGr/+miwg==,type:str]
-    DOMAIN_0: ENC[AES256_GCM,data:0hVeku7MDNZnYXjV,iv:PcqBO2fWO+g3S4tHpQH5wHFrdzE3xWdd0WjkIlY2Lug=,tag:/IhhWuCmD+rzXVj1aBlqoQ==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:8zJiPymwta33h4Fz4rOrOcI=,iv:GkSipvTYjJE0gEdlCsCim6KVBAf/ud8kjaMWYATKcM4=,tag:edG6NfeMgnbbk3xeCt+8KA==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:pdkn/+G1C7cpO3op5QZ5ZiM9gD/+If7lSFBDbG/K/oEAgS1HSPEQ/Q==,iv:qeGgUATBl8WBmYfalVth+llOFDLL3wMw9FPwMytioTc=,tag:OzULvjNCPL243txdhLzNYQ==,type:str]
-    #ENC[AES256_GCM,data:jp914XFOh+KlmQRXlEPyNE/s/GvwTJOtdnH4qgxSrTkNMLuDC3djmUnDRTEyyQ0HFKmkpveu8yE=,iv:Y+MRFNYzTo7NJujbKf3baALhj1ZH73Lx1+1B5oBTjcc=,tag:HFpJpGzU994a2Urn5QQngw==,type:comment]
-    #ENC[AES256_GCM,data:aq6Dy591U3FePOZ60Y+XDOtgCk5Fb7kOtQ==,iv:Ii1r1mXmrvaux+rzvghSzWD9QWPeLYVfAy3DLj2snQo=,tag:xVHKm6/mDO0Nap2SZmbqLg==,type:comment]
-    #ENC[AES256_GCM,data:X63oSUdiJasKd7wvrLZMK9Vz6RBnm9FAMDd67ZrgbPLtk73kxehO4qzCRJ4f+cfkcDVuDHOuUMSltnCts6W244zhHbLOSWQG5nFXgME=,iv:a0T6Crmu5Sd4Ec4PqX+2kd6H00D2vVrmEISbJjxkLzI=,tag:gb5NAUjKz2NHRGivxgb4Yw==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:YTQT7QhaNT35X1b/mILdz4iWOZitYLMg8LAxE4QVkDKkSorKkFFzvXBNR2StefaP,iv:vooyn+zKYLrQIjt0mX3Z459exstipkZwq77JPsbOHWg=,tag:VmkQSaGcW8b5+rlPaw4QVw==,type:str]
-    #ENC[AES256_GCM,data:69vpXOuBjLwQc0vz5TvSAnYXq+gDw5LXw/ocRYXzV1kJlA5KlboqbdGKghiF9zHPrOCiyvvntF8H3WiSzVZZ2QmuxD46H/g=,iv:jUoG67GZePaq6rfjKZOjo0O/8DLKzc+7hILinhRxuzo=,tag:prSUpI913MBiJizTvxGmWQ==,type:comment]
-    #ENC[AES256_GCM,data:Cr4ZyhzlxtSIRr4BUgiTIFbUnFyeQT1GNkgTPROLZHSqbxmcTbmiMGx18tK0umF74VZO6o+j,iv:cdEJbXWEuCgmMaOYISKwD+08A/rxi7I2/3UyDKLV+O0=,tag:jbRFDVdLdjKQRvcWba4DZQ==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:mrGO29Y0+A==,iv:wmfOXcW+K8Fj6KZAH+wTCagoHAZHbbkebD/ZxGPLrdM=,tag:NC1UUtOA3gytwNM6qSR4Mg==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:iJPdx95EYTW0v5oagmc+JWX0avw=,iv:GIbWCO/7VFTWyZaeVq5VYQkKzgAHe6buJMQjZW6nGmk=,tag:IiMwCNe+0HDhPxlFU8In5g==,type:str]
-    #ENC[AES256_GCM,data:kB5QlHRckfZdAHSDuYY=,iv:m2kqV7JKoRjQwfjpua1tGHdUtu8E1HJDY4UQBX7obTo=,tag:LNCMycCOeOdqfp0AMsMOfQ==,type:comment]
-    PODNET: ENC[AES256_GCM,data:VLqfOm778sPnwe4zIQ==,iv:uwNgfY13Eopa/Cgl5H7LqjCcPjHPDPtpeLvXvkuYDP8=,tag:dWdSHmVKOQ8ur3OxQzUl3w==,type:str]
-    SVCNET: ENC[AES256_GCM,data:TfvSqXlD4ibqQKVD9w==,iv:IlQYYo5u4rxIl632droWYmymE6nr3ez6MLmauwzTebQ=,tag:ZHtnOf/iuVeoH1Wo8Csn0w==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:25mq3Q==,iv:eSHsamI+/iLSLjidDxRzzRCkwoV4MZBlcOPcS56QTGg=,tag:PjSp+gZpFUA+x9v4pVpTmA==,type:str]
+    #ENC[AES256_GCM,data:XUHiutuaHCkNIpA7pwu5pZF9h5mqdNdezq0IirltMk5rG8Af9k+vezhmDDj4Lvy24BsAQrUEA540qHofvcTVy3w=,iv:oMBtK1rJOTAOrgVfwiHzeWABgV8BK0vDJ5OkN9Fam/g=,tag:cUAxTlpuv/qzGixwLxvqlg==,type:comment]
+    #ENC[AES256_GCM,data:CZVr3oFTsuC9Usbps7Gcjz5iIFSGAbSMLhytVyagqEUU5aRVFSjU1jqtFig=,iv:bem/WZt+WbLZappf1494tom2N4uGHvMCJ0mvHjiu05E=,tag:lRJbpTIDBK4HFEuFuGZvww==,type:comment]
+    VIP: ENC[AES256_GCM,data:KH/m3p5gPCswPXeMAA==,iv:Ye4xZToE94Js2Q3Ih9zMYQN7n+xhAkrW5967LerZ7RY=,tag:nu5dtRBV0w5DjxlQp2Xk5A==,type:str]
+    #ENC[AES256_GCM,data:lL/Lr+C5n8kEjJ1/ZTQxzTcrmg5NnOoyOtIT,iv:QhA+vubaP5JGmIL2KU/pqDAgv5DhCUcNMn7pA3UkEEc=,tag:ELBSMPpiFFjqhyylx2OqYA==,type:comment]
+    #ENC[AES256_GCM,data:CGiyfc43vpsdsYyNt0KxHkZzceFjBut1hPnRCvVcrRWS7N3DdtWanl1Qa8S7JlCs3Ny1ppW7rIPkbbWxeBTgBMuVIeDPero6swOcszTPaLLY/7x2leWfLOs=,iv:1lox2FKRZ2X34qXjFb2xSwVcnKuCsVVeHyvfh1M60RM=,tag:wAKFJHc9fzkiBVbl1QJtSA==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:/njDFOHPJWzMIE1xnH4=,iv:6NT/AMd+QhNF9dRDv9aF+GLQ6oONxTh1sRUdjSpIQ8g=,tag:SgMzgUXHDiz8YgCvuKMVtA==,type:str]
+    #ENC[AES256_GCM,data:rUGAokLG+W7to2eNSAS1X5kLzZRXOSWYSRSHHRMApOjFuQ==,iv:kH/bZ7CMdF/GaL4YJVjuU3+clTUicYeZ/M4Q4M3Cjbg=,tag:xgCdsFFDom5GFt06GmeofQ==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:/2NxEF+fu1TWzwsJwA==,iv:RZ7wHK+IqSMDzJ71mUgbKn0ifqgKbDjm7piISUJIyWA=,tag:42TzxES4JrXgDNSFu34DAg==,type:str]
+    #ENC[AES256_GCM,data:F2WoEZmjNwsGnIbtPssp+aEEmHwiBe++Gq9EfKkMfayYjRwE3JHtesLBr5Y58KY=,iv:Nd9ekA3xAr+TXPiONA8JP7PU7MxrqXu21epytHuDVjg=,tag:nzjYZkPWv+reQefF4W63ww==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:BP9e5Iguh1MHxmh/wP6sUOtmlMzlUk5oCQXB5OKf1g==,iv:jOG7NKZ3VsvzrtWWt2SQ43A2HQFxoOMTjMBjiAEOCQE=,tag:ejMW+RnbWt4ZlXI9vvu95Q==,type:str]
+    #ENC[AES256_GCM,data:dDgZHckLjSrzusG1Psc8jwxaUomgg+D1e4roRTBZnRWPk7utUD2TdGv4zbkyuqpPPO44ik0agcSYoXCT2/k1n+VEPeXUMtDPUAZbNZJtmn7ehg==,iv:jOCTXx6TktpTLvy2JGa0B9XPhGAQH9sY3FkDMyLh2r4=,tag:6X3Uw8Dj17ApOXJX9sAumw==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:LKJvvi6tuQxWonGOcqpb,iv:hCkMP8nBW8bsHTBa3mNo28iBwbYsiWxkthKeqgpXUzc=,tag:fhuq3zZudDP2tGc9Ys1dtw==,type:str]
+    #ENC[AES256_GCM,data:EMY7NSBYazyPkA1oPIPxgVm9sKyi3rRLjL3hlQkPqegp,iv:e4JXdah2Tn1h9SvM8DXMbRkwnrrXuYT2OFYgQ4Cl0Zg=,tag:xjM4LXdh5akd1lrt1kuLgQ==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:vN+0Zc6uKJgN3PxT4CJh,iv:l4ZX+8K4Y0WyTvE+9vd9wFkMmMvRLjHPr8l/RRYRrv4=,tag:zhnFuUL2scQvSPZjJFksDQ==,type:str]
+    #ENC[AES256_GCM,data:M4qfXu8PDeygRfstQglbwXWTvewn43FJ8stcbMUyFZlkZxGTbEiTzSXnYpIYKcWFszzuX5xSGGnAJDPnlK0DRlTYbu2IXSBn91zi3Q1QaKY=,iv:525XHxHon/pk6w6y5JNm1KkLMrthZHY8e5erkmD3R0I=,tag:RyZjr5AfyINALnUWLwNvGg==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:XbLJxi1fsuyTalnNczuj,iv:OLkXiSKOkIllIE1wgNQ28lpyZ3usuGJb88t9iuUylm4=,tag:MWuo2im6jC6LGeq1HPmo/A==,type:str]
+    #ENC[AES256_GCM,data:2gDm9kuvrAWy1/0IPRorkQpZkFa/RHQpl7+nq6RBMBhYvHn1bx3HfDd8+eJAkUX4onZjl3Vwsq6M5ktUWvtarWtbdddNS8i5QU8e2SbgpYv/4TrrElGN,iv:l5xDjtImHRsPXyKzqy6o/l8zZA5VaJu0eGgfSLaDX04=,tag:Gq1ASR4kbMVCZzQg44FfRA==,type:comment]
+    #ENC[AES256_GCM,data:tqQlwgK45NSWh3DRv7jNGjvNQDjwq0WEUDgHXvhft6lBd2Twkrq6SoBkOPey6Wl0pnlmPPkVkL2YDd5jvlQuwKBM6c2w1saG0Xri27tI/yncwQZyx5GSlBtFvHGS055cbPuCmIt0W1QL7H+MVjfptrxm7iT7+yBWJUldXw==,iv:9MFTDKjypD8SIwcjxjXzJajwsP+TpmIJi99rffpKWVs=,tag:RRw+AQiAhFu/Pp32SkGChQ==,type:comment]
+    #ENC[AES256_GCM,data:QYarh7ff+28LsPLQwt91caHAntDZKxAqKzwhjrLn6YUZDb8wVy23YrpfCW5eA6Hw6TVlyP/t0uHiS6P+Mq2/0ArnC0NP6iUI7ZDSifm18KY=,iv:H+xmQi7+LaWsqsViS1cnzPqgtO9boS4z9MpRLq7ksPk=,tag:MIUKzRz4o9x6+xnR49ADIA==,type:comment]
+    #ENC[AES256_GCM,data:R6MVaxqvd4dvYBeaTM9gnIKIxhTzJlCLZurb1OpYDeRlUJcDIY2wBXSNQ1+uriMOtDEjUP0f,iv:7jB0j13ID63hX4LdcVepZ44Y+xc4mzsfClzZTgaqcGc=,tag:30E4rvDq96fUlB8O819GWw==,type:comment]
+    DDNS_URL: ENC[AES256_GCM,data:TFRSBcLp66cWtSLADS4=,iv:VQiQIlityolaUiL/Mv3XZPvfyHWZi3AbyGwKmwR+VyM=,tag:gMxpuMrx++MAMfJgmJJTvw==,type:str]
+    DOMAIN_0: ENC[AES256_GCM,data:49kgZ28V/5U2BZ2w,iv:6M1ZKYQzhUHKclyO73Wv8q5xUhnDDwyfcSXYh/us3Yw=,tag:SjFPyBumMUoP3R+Q1oz1/A==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:dw2dfgOT3HnC6izylfV4yOM=,iv:QPcTCz7wlFyY3ZxdBtrEG/55CuPaiZ+lnlGe/osXzB8=,tag:6bRxkrxpl6zFh76GkHEE+w==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:TOtsIVgx/JcH57594QaKRGOfaMUJyLsgXRDL93/hWIi15N+LzLLnhg==,iv:cWdSHlwZ/OaCygk1d9KqelTqUQUYJGKu7PM41fKhmxs=,tag:XtLVbmuZOHG84OMGMEJXow==,type:str]
+    DOMAIN_0_CLOUDFLARE_API_KEY: ENC[AES256_GCM,data:xuUOkhYl2xgwFvcbt222TmkljSCfIvf5lBolPVbhJanVTraNCg==,iv:z/0rLKfU8SERPAk10iv5cE98exVf0+/TvG3IgTnjuLE=,tag:8UjQLYbO6KzU8XzM+Pjncg==,type:str]
+    #ENC[AES256_GCM,data:YS7ul41tviDy0yQREKHzBYdTYdBnDfN+FX5g/1HJ7cbp+Lxcf0tl0TggliDJ7zfbn8IG5vaMGoY=,iv:2nO4zRIn0DhIowI9HyhnGfsU0j/0Q2ksFsjHOQq4B5k=,tag:GXiOT7DgjUmNOGcgzr3GGA==,type:comment]
+    #ENC[AES256_GCM,data:RHKaHV6gGHECr9HtiOkJ3cxBlia3UR+IWg==,iv:aavOT/BXButQ4688lkKwfl3CDRA6p4CLkdM4V5FwQyc=,tag:XgaxvX6/zdcf9G9V2CYEDw==,type:comment]
+    #ENC[AES256_GCM,data:aCR8M3pGAzyBdbe0jMIQHW4KXZRpntdujyeVDLlQHeQzTJm5jxQ2wGphlp8zpsxDpEw1/3RA8DqY1f0FzZGRRWMGLzMyGaBDTpdC0mQ=,iv:ZU8fFXs/7J2NNz0YW7u+fQsPx34uJSH+hp30ziUidM4=,tag:nZcvh7tvH/xEF5y4uZZhZQ==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:0kh/DwGk/D7WoVJ0W194ekNHemUi5WUJRD9LzJPlMoofwKtG4LTmlynXQsvgaDbl,iv:8cQ/TBbdieFa8FoHPkSD9uJ7d9pRQHc8ijpxwAo/wJQ=,tag:6TNsIDc7QUUP1d9oJnH4Bw==,type:str]
+    #ENC[AES256_GCM,data:hwyp/3h9SzVqXK4/mLoBrZxx2eHqZLOHRjL0TMbFrjB4myax9vyhHE6LsU6lEhjW8QBrCkBD/opT7aa5xw9QAO6EEcye8pw=,iv:IWCfKSU+nNx3GBUlzyEV4ddWfD5umhM/sNkkLAkOH60=,tag:ZatTMq18WKToOqZYIYANAQ==,type:comment]
+    #ENC[AES256_GCM,data:J5Om2wva8it24yajPmLVIf/jntitLoj/kNqmqqikk72rFQ9cVr58AToXAWtlkbxBDRWEvGfD,iv:pzjoQqvps2w1oHWB9GgvZwfxTpyDo+0ZoEIOQTfH9B0=,tag:Wzir5MLEl1jv9i09St3Uog==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:qUNcnCj6qQ==,iv:2jTEbHOwXx1IQarfq2tc9fIJEBBq2oOwiuv1KfGVIZY=,tag:1sT4YOL+YtxI0/BtEFV70w==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:xhjn3bbSCe3LA5UARfsyVbc2Aos=,iv:1IXO3H8BsjHKusKL0IlhOmIUBql5I51StwS8Mj+8AoA=,tag:TxZwrz8U6bdrlJZvG0DG8Q==,type:str]
+    #ENC[AES256_GCM,data:KWn7NOOgm73oblcMlA4=,iv:FSYpN3keGFD9eFezPxUjfPpV8mu+xdEuDvOkYr441eM=,tag:2cpSMv/Wzw2o0O5if+OVvQ==,type:comment]
+    PODNET: ENC[AES256_GCM,data:6iD91dcmDm/0swZ/ZA==,iv:2DRllSrPybcP6ZTXxKFbQJa7TzyummHyfnWWodaoSOg=,tag:7DcKV/crOi5aS1lJSK+riA==,type:str]
+    SVCNET: ENC[AES256_GCM,data:SFZQZ/LjwiaACsdhCQ==,iv:E21j97P37U4INhmobZM0JAD7bL8DJO9AYxQZYwDCgOk=,tag:5+DPVj7pCflB/ywFC/iRAg==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:TcvgrA==,iv:R0NO9IVqEi8wDidosVCK2+eY1byI22PZ3JzlssA1kc8=,tag:t6xrPLOYEJ/m2qp33sHcEA==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,14 +51,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0MzV1bkYxL1BucmdLa2h2
-            c2ZMTVg4RnNDTm8rNk1BZmNwVytZQUJ5UW5NCnYrdUxjQXpaTU1vOXExYUVpVDZz
-            amVoT1RYOHlRRmJOODAvb3hQTzhaVGMKLS0tIHo3eFlXRGRCSmVSbkQrb1NmUW5M
-            NEdPMlFMK1M2NzNIS21YSnZBbGUwVW8KbXvmX5MqebCs1PaxJx0xWRNF0Aqf0bNG
-            wzchjfuvugZ6rG1IC2DudFxjRbT1GneV4ayxFASPyM2ogm+trAZeiw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBFVWlEbzRrUXF5V0I1eVov
+            M0IreDZuUFlNeUdaTzJIRFZHUDA5QThUNW1VClVDeVN4K0FzYXh5ZFFUSmlDRnRj
+            WDgvb1VqendTM3BsdFpabGhML3NGMFkKLS0tIG5rdHNaSVdjd1IvVnVDZ0FHU2RQ
+            dUxlUDh1OEVsMmNJT0ZYWHZ4MGtCT1UKS8FzNPjn7UXAJDIiNR78N9oqHJIF1qvL
+            qtmHxuiOnu562ULCiVj/7Hl+9TWaGhDhpDBocpgoqOPS1FrwCoJ6Iw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-27T15:08:00Z"
-    mac: ENC[AES256_GCM,data:9H4gopzbgjVJ9mfdMN5YSjDHgzqAHU9S5pCwiCZc1kx0IFE/bjQ0H6IRb4iQVIFHBZ1Aml7DuaMtuPPan4nIeR5vK2RPt02VHXZd99mlbBbn7chBxukdk6rVEeh4LgZOkNcWHxpgQBa/rXGIW5wqUKIDcS9besbJ3X6UCTZkH8g=,iv:QR7frr7Plbxew61+v0OEIThlUkHuR3m1sLo6y9zJfwU=,tag:k2owbJjR9y5jWmwKnvItGg==,type:str]
+    lastmodified: "2024-12-28T21:15:59Z"
+    mac: ENC[AES256_GCM,data:H9nqJXSvfdFk5a3I1d7uxQ7orwCypBAegLsHV77VJAhWyzs9KII0hc/mLA1SzWD2+mzDQZ3vecKKIlLIwLwjTFK8aZVqDFMvA6yugq5sUi6FSY+JZ3l8nBa21I+EqwJIAa1UzxZuvt20ABYlIV/P63Q+kXs7iXvKA6nUJV38E1U=,iv:vnmJUCm/iwlhs+HfnjxrTvZ3LGp2zI9yOAYxMkVmmKE=,tag:fYC0w4J8UpVGByUZbcT48A==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
